# TVMaestro

./: README.md  alpha-test.md  alpha.md  beta-test.md  beta.md  pre-alpha.md  production-release.md  release_candidate.md  thirdParty.md
Companion App/: README.md
Companion App/AndroidApp/app/: build.gradle.kts
Companion App/AndroidApp/app/src/main/: AndroidManifest.xml
Companion App/AndroidApp/app/src/main/res/layout/: add_schedules.xml  fragment_dashboard.xml  fragment_home.xml  pair_options.xml
Companion App/AndroidApp/app/src/main/res/menu/: bottom_nav_menu.xml
Companion App/AndroidApp/app/src/main/res/navigation/: mobile_navigation.xml
Companion App/AndroidApp/gradle/wrapper/: gradle-wrapper.properties
Companion App/HelloWorldApp/: settings.gradle.kts
Companion App/HelloWorldApp/app/: build.gradle.kts
Companion App/HelloWorldApp/app/src/main/: AndroidManifest.xml
Companion App/HelloWorldApp/app/src/main/res/values/: themes.xml
Companion App/HelloWorldApp/gradle/wrapper/: gradle-wrapper.properties
audioClassification/: build_dataset.ipynb  build_model.ipynb  excel_visualization.ipynb  transcribe.ipynb
docs/: Contributions.md  Design-Prototype.md  alpha.md  beta-test.md  beta.md
docs/Components/: SIR-56ST3F.pdf:Zone.Identifier  TSOP4838.pdf:Zone.Identifier
remote/: CMakeLists.txt  README.md
remote/arduino/: controller.ino  packetParser.cpp
remote/libraries/: MCP4725.h  signal.cpp  signal.h
remote/src/: main.cpp
tv-commerical detection/: buildModel.md  build_model.py  commercial_detection_model.md  main.py  testModel.md
(+11 files in other folders)
